--- a/sty.css
+++ b/sty.css
@@ -14,7 +14,8 @@ body {
     background-size: cover;
    
     
-    background-color: #000000;
+    height: auto;
+   background-color: #333;
    
    
   
@@ -177,7 +178,54 @@ h2 {
   button[type="submit"]:hover {
     background-color: #45a049;
   }
+  .form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
+.form-wrapper {
+    max-width: 400px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+input[type="time"],
+input[type="number"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #ff0000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
   .success-message {
     margin-top: 20px;
     padding: 10px;
@@ -210,7 +258,9 @@ h2 {
 
 }
 
-
+#menu .nav-item {
+    color: red;
+}
 
 
 @media (max-width: 1300px) {
