--- a/styl.css
+++ b/styl.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    
 }
 
 .container {
@@ -9,12 +10,15 @@ body {
 
 .header {
    
-    height: 10vh;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+
+  
    
-    
-    background-color: #000000;
+    height: auto;
+   background-color: #333;
    
    
   
@@ -30,7 +34,7 @@ body {
 }
 
 .nav-item {
-    color: #fff;
+    color: #FFFFFF;
     text-decoration: none;
     font-weight: 600;
     font-size: 20px;
@@ -101,7 +105,7 @@ h2 {
     font-family: 'Playfair Display', serif;
     font-size: 28px;
     margin-bottom: 20px;
-    color: white;
+    color: black;
 }
 
 .menu {
@@ -134,6 +138,7 @@ h2 {
 
 .dish-details {
     padding: 20px;
+   
 }
 
 .dish-name {
@@ -159,7 +164,9 @@ h2{
     margin-top: 45px;
 
 }
-
+#menu .nav-item {
+    color: red;
+}
 
 @media (max-width: 1500px) {
 
@@ -236,7 +243,7 @@ h2{
     }
 
     .right-button {
-        margin-top: 30px;
+        margin-top: 20px;
     }
 
 
