--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,15 @@ body {
 }
 
 .header {
-    background-color: #000;
-    height: 7vh;
+    height: auto;
+   background-color: #333;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-
+#menu .nav-item {
+    color: red;
+}
 .header-line {
     padding-top: 50px;
     display: flex;
@@ -156,14 +158,17 @@ body {
     background-color: #904506;
 }
 h1{
-  margin-left: 40px;
+  text-align: center;
+  color: #904506;
 }
 p{
-  font-weight: 700;
-    font-size: 45px;
+  font-weight: 250;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
 }
 .con{
-  width: 98%; 
+    background-color: azure;
+  width: 90%; 
   margin: 0 auto; 
   padding: 20px;
   border: 3px solid black; 
@@ -405,7 +410,7 @@ button {
 
 p{
     font-family: 'Tinos', serif;
-    font-size: 34px;
+    font-size: 30px;
     text-align: center;  
 }
 
@@ -541,7 +546,7 @@ p{
     }
 
     .number-item {
-        font-size: 23px;
+        font-size: 20px;
     }
 
 }
